--- a/themes/fluid/layout/_partial/footer.ejs
+++ b/themes/fluid/layout/_partial/footer.ejs
@@ -2,6 +2,20 @@
   <div class="footer-content">
     <%- theme.footer.content %>
   </div>
+  <style>
+    .live2d {
+        position: fixed;
+        left: -100px;
+        bottom: -20px;
+        width: 500px !important;
+        height: 437.5px !important;
+        z-index: 998;
+    }
+</style>
+<div id="live2d" class="live2d">
+    <canvas id="live2dm" class="live2d" style="z-index: 999!important;"></canvas>
+</div>
+<script src="https://npm.elemecdn.com/chenyfan-oss@2.0.3"></script>
   <%- partial('_partial/statistics.ejs') %>
   <%- partial('_partial/beian.ejs') %>
   <% if(theme.web_analytics.cnzz) { %>
