--- a/themes/fluid/layout/post.ejs
+++ b/themes/fluid/layout/post.ejs
@@ -50,10 +50,11 @@ page.banner_mask_alpha = page.banner_mask_alpha || theme.post.banner_mask_alpha
                   <% if (typeof page.copyright === 'string' && page.copyright !== '') { %>
                     <%- page.copyright %>
                   <% } else { %>
-                    <%- theme.post.copyright.content %>
+                    <%- theme.post.copyright.content %> 本文作者：<%- page.author %>
                   <% } %>
                 </p>
               <% } %>
+              
               <% if(theme.post.prev_next.enable && !page.hide) { %>
                 <div class="post-prevnext">
                   <article class="post-prev col-6">
