更新清除缓存

--- a/themes/fluid/layout/_partial/footer.ejs
+++ b/themes/fluid/layout/_partial/footer.ejs
@@ -1,75 +1,82 @@
 <footer class="text-center mt-5 py-3">
-  <div class="footer-content">
-    <%- theme.footer.content %>
-  </div>
-  <style>
-    .live2d {
-        position: fixed;
-        left: -100px;
-        bottom: -20px;
-        width: 500px !important;
-        height: 437.5px !important;
-        z-index: 998;
-    }
-</style>
-<div id="live2d" class="live2d">
-    <canvas id="live2dm" class="live2d" style="z-index: 999!important;"></canvas>
-</div>
-<script>
-  window.notyf=new Notyf;
-  function loadScript(e, n) {
-    var t = document.createElement("script")
-      , o = document.getElementsByTagName("head")[0];
-    t.type = "text/javascript",
-    t.charset = "UTF-8",
-    t.src = e,
-    t.addEventListener ? t.addEventListener("load", function() {
-        n()
-    }, !1) : t.attachEvent && t.attachEvent("onreadystatechange", function() {
-        "loaded" == window.event.srcElement.readyState && n()
-    }),
-    o.appendChild(t)
-}
-  document.getElementById("liveswitch").addEventListener("click", function() {
-    document.getElementById("live2d") || notyf.error("找不到模型，请使用电脑浏览"),
-    "false" != window.localStorage.getItem("LPBlogLive2D") ? (window.localStorage.setItem("LPBlogLive2D", "false"),
-    document.getElementById("live2d").style.display = "none",
-    notyf.success("Live2D 已关闭")) : (window.localStorage.setItem("LPBlogLive2D", "true"),
-    notyf.success("Live2D 已开启")),
-    setTimeout(()=>{
-        window.location.reload()
-    }
-    , 1e3)
-}),
-setTimeout(()=>{
-    window.FPConfig = {
-        delay: 0,
-        ignoreKeywords: [],
-        maxRPS: 3,
-        hoverDelay: 50
-    },
-    600 < document.body.clientWidth && "false" != window.localStorage.getItem("LPBlogLive2D") && loadScript("https://npm.elemecdn.com/chenyfan-os@0.0.0-r3/load.js", function() {
-        loadModel(),
-        document.getElementById("live2d").style.display = ""
-    })
-}
-, 0),
-document.onreadystatechange = function() {
-    //"complete" == document.readyState && (loadScript("https://npm.elemecdn.com/chenyfan-os@0.0.0-r1/lazyload.min.js", function() {}),
-    //loadScript("https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js", function() {}))
-}
-function lpblogconsolelog(){
-for (var i=0;i<=20;i++)
-{ 
-    console.log("◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◇◆◆◆◆◆◆◆◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◆◆◆◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◆◆◇◇◇◇◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◇◆◆◇◇◇◇◇◇◆◆◇◆◆◇◇◆◆◇◇◇◇◇◇◆◆◇◇◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◇◆◆◇◇◇◇◇◆◆◆◇◆◆◇◇◆◆◇◇◇◇◇◇◆◆◇◇◇◇◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◆◆◇◇◆◆◇◇◇◆◆◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◆◆◇◇◇◇◇◇◇◇◆◆◇◇◆◆◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◆◆◇◆◆◆◇◇◆◆◇◇◇◇◇◇◆◆◆◆◆◇◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◆◆◇◇◇◇◇◇◇◇◆◆◆◇◆◆◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◇◇◇◆◆◇◇◇◇◇◇◆◆◇◇◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◆◇◇◇◇◇◇◇◇◇◆◆◆◆◆◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◆◆◇◆◆◆◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◆◆◇◇◇◇◇◇◇◇◆◆◆◇◇◇◇◇◇◇◇\n◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◆◆◆◆◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◇◇◇◇\n◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◇◇◇◇◇◇◇◇◇◆◆◇◇◇◆◆◇◇◇◇\n◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◇◇◇◇\n◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n欢迎来到我的博客！这是第" + i + "次输出。" + "\n                                                                                                 -- 启动台");
-}
-}
-setTimeout("lpblogconsolelog()", 500 )
-</script>
-  <%- partial('_partial/statistics.ejs') %>
-  <%- partial('_partial/beian.ejs') %>
-  <% if(theme.web_analytics.cnzz) { %>
-    <!-- cnzz Analytics Icon -->
-    <span id="cnzz_stat_icon_<%= theme.web_analytics.cnzz %>" style="display: none"></span>
-  <% } %>
+    <div class="footer-content">
+        <%- theme.footer.content %>
+    </div>
+    <style>
+        .live2d {
+            position: fixed;
+            left: -100px;
+            bottom: -20px;
+            width: 500px !important;
+            height: 437.5px !important;
+            z-index: 998;
+        }
+    </style>
+    <div id="live2d" class="live2d">
+        <canvas id="live2dm" class="live2d" style="z-index: 999!important;"></canvas>
+    </div>
+    <script>
+        window.notyf = new Notyf;
+
+        function loadScript(e, n) {
+            var t = document.createElement("script"),
+                o = document.getElementsByTagName("head")[0];
+            t.type = "text/javascript",
+                t.charset = "UTF-8",
+                t.src = e,
+                t.addEventListener ? t.addEventListener("load", function() {
+                    n()
+                }, !1) : t.attachEvent && t.attachEvent("onreadystatechange", function() {
+                    "loaded" == window.event.srcElement.readyState && n()
+                }),
+                o.appendChild(t)
+        }
+        document.getElementById("liveswitch").addEventListener("click", function() {
+                document.getElementById("live2d") || notyf.error("找不到模型，请使用电脑浏览"),
+                    "false" != window.localStorage.getItem("LPBlogLive2D") ? (window.localStorage.setItem("LPBlogLive2D", "false"),
+                        document.getElementById("live2d").style.display = "none",
+                        notyf.success("Live2D 已关闭")) : (window.localStorage.setItem("LPBlogLive2D", "true"),
+                        notyf.success("Live2D 已开启")),
+                    setTimeout(() => {
+                        window.location.reload()
+                    }, 1e3)
+            }),
+            setTimeout(() => {
+                window.FPConfig = {
+                        delay: 0,
+                        ignoreKeywords: [],
+                        maxRPS: 3,
+                        hoverDelay: 50
+                    },
+                    600 < document.body.clientWidth && "false" != window.localStorage.getItem("LPBlogLive2D") && loadScript("https://npm.elemecdn.com/chenyfan-os@0.0.0-r3/load.js", function() {
+                        loadModel(),
+                            document.getElementById("live2d").style.display = ""
+                    })
+            }, 0),
+            document.onreadystatechange = function() {
+                //"complete" == document.readyState && (loadScript("https://npm.elemecdn.com/chenyfan-os@0.0.0-r1/lazyload.min.js", function() {}),
+                //loadScript("https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js", function() {}))
+            }
+
+        function lpblogconsolelog() {
+            for (var i = 0; i <= 20; i++) {
+                console.log("◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◇◆◆◆◆◆◆◆◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◆◆◆◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◆◆◇◇◇◇◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◇◆◆◇◇◇◇◇◇◆◆◇◆◆◇◇◆◆◇◇◇◇◇◇◆◆◇◇◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◇◆◆◇◇◇◇◇◆◆◆◇◆◆◇◇◆◆◇◇◇◇◇◇◆◆◇◇◇◇◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◆◆◇◇◆◆◇◇◇◆◆◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◆◆◇◇◇◇◇◇◇◇◆◆◇◇◆◆◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◆◆◇◆◆◆◇◇◆◆◇◇◇◇◇◇◆◆◆◆◆◇◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◆◆◇◇◇◇◇◇◇◇◆◆◆◇◆◆◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◇◇◇◆◆◇◇◇◇◇◇◆◆◇◇◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◆◇◇◇◇◇◇◇◇◇◆◆◆◆◆◇◇◇◇◇\n◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◆◆◇◆◆◆◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◇◆◆◇◇◇◇◇◇◇◇◆◆◆◇◇◇◇◇◇◇◇\n◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◆◆◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◇◆◆◆◆◇◇◇◇◇◇◇◆◆◆◆◆◆◆◆◆◇◇◇◇◇◇◇◇◇◇◆◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◇◇◇◇\n◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◇◇◇◇◇◇◇◇◇◆◆◇◇◇◆◆◇◇◇◇\n◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◆◆◆◆◆◆◆◇◇◇◇\n◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇◇\n欢迎来到我的博客！这是第" + i + "次输出。" + "\n                                                                                                 -- 启动台");
+            }
+        }
+        setTimeout("lpblogconsolelog()", 500);
+
+        function clearcache() {
+            caches.delete("pwabuilder-offline");
+            notyf.success("缓存清理完成！"),
+                setTimeout(() => {
+                    window.location.reload()
+                }, 1e3)
+        }
+    </script>
+    <%- partial('_partial/statistics.ejs') %>
+        <%- partial('_partial/beian.ejs') %>
+            <% if(theme.web_analytics.cnzz) { %>
+                <!-- cnzz Analytics Icon -->
+                <span id="cnzz_stat_icon_<%= theme.web_analytics.cnzz %>" style="display: none"></span>
+                <% } %>
 </footer>
